Balabit logo and partial fix for program on small screens (track labels)

--- a/_sass/layouts/_program.scss
+++ b/_sass/layouts/_program.scss
@@ -98,12 +98,13 @@ speaker {
         position: absolute;
         /* Top/left values mimic padding */
         top: 6px;
-        left: 6px;
+        left: 2px;
         width: 45%;
         padding-right: 10px;
         white-space: nowrap;
         text-align:left;
         font-weight: bold;
+        font-size: small;
         }
          
         /*
